--- a/gavel-contest/package.json
+++ b/gavel-contest/package.json
@@ -9,8 +9,12 @@
   },
   "dependencies": {
     "axios": "^0.26.0",
+    "dns": "^0.2.2",
     "firebase": "^9.6.6",
+    "firebase-admin": "^10.0.2",
+    "firebase-functions": "^3.18.0",
     "firebaseui": "^6.0.0",
+    "http2": "^3.3.7",
     "vue": "^2.2.1",
     "vue-cli": "^2.9.6",
     "vue-router": "^2.4.0"
