--- a/gavel-contest/package.json
+++ b/gavel-contest/package.json
@@ -17,7 +17,8 @@
     "http2": "^3.3.7",
     "vue": "^2.2.1",
     "vue-cli": "^2.9.6",
-    "vue-router": "^2.4.0"
+    "vue-router": "^2.4.0",
+    "vuejs-dialog": "^1.4.2"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
