--- a/gavel-contest/package.json
+++ b/gavel-contest/package.json
@@ -18,7 +18,8 @@
     "vue": "^2.2.1",
     "vue-cli": "^2.9.6",
     "vue-router": "^2.4.0",
-    "vuejs-dialog": "^1.4.2"
+    "vuejs-dialog": "^1.4.2",
+    "vuetify": "^2.6.4"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
@@ -27,9 +28,14 @@
     "babel-preset-latest": "^6.0.0",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
+    "deepmerge": "^4.2.2",
     "file-loader": "^0.9.0",
+    "sass": "^1.32.13",
+    "sass-loader": "^12.6.0",
+    "vue-cli-plugin-vuetify": "~2.4.7",
     "vue-loader": "^11.1.4",
     "vue-template-compiler": "^2.2.1",
+    "vuetify-loader": "^1.7.0",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0"
   },
