--- a/gavel-contest-server/package.json
+++ b/gavel-contest-server/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "express-fileupload": "^1.3.1",
     "joi": "^17.6.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
