--- a/gavel-contest-game/Dockerfile
+++ b/gavel-contest-game/Dockerfile
@@ -1,5 +1,6 @@
 FROM node:lts-alpine
 WORKDIR /usr/src/app/gavel-contest-game
+COPY test.html /usr/src/app/gavel-contest-game
 RUN npm install formidable --save
 RUN npm install mime-types --save
 COPY . .
