--- a/gavel-contest/package.json
+++ b/gavel-contest/package.json
@@ -7,6 +7,9 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "peerDependencies": {
+    "postcss": "^8.0.0"
+  },
   "dependencies": {
     "axios": "^0.26.0",
     "dns": "^0.2.2",
