--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
       dockerfile: Dockerfile
     restart:
       always
-    ports:
-      - "8081:8081"
+    expose:
+      - "8081"
     container_name: gavel-contest-server
     volumes:
       - ./gavel-contest-server:/usr/src/app/gavel-contest-server
@@ -30,8 +30,8 @@ services:
       dockerfile: Dockerfile
     restart:
       always
-    ports:
-      - "8000:8000"
+    expose:
+      - "8000"
     container_name: gavel-contest-game
     volumes:
       - ./gavel-contest-game:/usr/src/app/gavel-contest-game
