--- a/gavel-contest/package.json
+++ b/gavel-contest/package.json
@@ -21,7 +21,8 @@
     "vue": "^2.2.1",
     "vue-cli": "^2.9.6",
     "vue-router": "^2.4.0",
-    "vuejs-dialog": "^1.4.2"
+    "vuejs-dialog": "^1.4.2",
+    "vuetify": "^2.6.4"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
