--- a/gavel-contest/package.json
+++ b/gavel-contest/package.json
@@ -7,9 +7,6 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
-  "peerDependencies": {
-    "postcss": "^8.0.0"
-  },
   "dependencies": {
     "axios": "^0.26.0",
     "dns": "^0.2.2",
@@ -32,10 +29,17 @@
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "~2.4.8",
     "vue-loader": "^11.1.4",
     "vue-template-compiler": "^2.2.1",
+    "vuetify-loader": "^1.7.0",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0"
+  },
+  "peerDependencies": {
+    "postcss": "^8.0.0"
   },
   "eslintConfig": {
     "root": true,
